Added hard-coded example

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,12 @@
             <input type="text" name="customName" id="customName">
         </div>
         <button type="submit">Apply!</button>
-    </form>
-</body>
 
+        <h2>Applied URLs</h2>
+        <ul id="listUrls">
+            <li>No items here</li>
+        </ul>
+    </form>
+    <script src="/app.js"></script>
+</body>
 </html>
