added cors url handler

--- a/views/index.html
+++ b/views/index.html
@@ -12,12 +12,8 @@
 
     <form action="/applyCors" method="post">
         <div>
-            <label for="originalUrl">Original Url</label>
-            <input type="url" name="originalUrl" id="originalUrl" value="http://google.lt">
-        </div>
-        <div>
-            <label for="customName">Custom Name</label>
-            <input type="text" name="customName" id="customName">
+            <label for="originalUrl">Url</label>
+            <input type="url" name="fullOriginalUrl" id="fullOriginalUrl" value="https://atvira.sodra.lt/imones-rest/solr/page?_dc=1573298861317&text=&minAvgWage=&maxAvgWage=&minNumInsured=&maxNumInsured=&municipality=21&municipality=55&evrk=62&start=0&size=2000">
         </div>
         <button type="submit">Apply!</button>
 
